testing elle